# Sudoku

./: .gitmodules  CMakeLists.txt  Interface.cpp  Interface.h  READ.ME  README.md  main.cpp
registration/: registration_user.cpp  registration_user.h
sudoku/: Board.cpp  Board.h  Level_0.cpp  Level_0.h  Level_1.cpp  Level_1.h  status.h
table_sudoku/: level_0  level_1
test/: level1_test.cpp  level2_test.cpp  reg_test.cpp
